work item bg image issue solved (no more clipping)

--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -271,12 +271,13 @@ body {
     position: relative;
     box-sizing: border-box;
     width: 180px;
-    height: 291px;
+    height: 311px;
     min-width: 180px;
-    min-height: 291px;
+    min-height: 311px;
     border: 3px solid #e7e7e7;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     transition: background-image 2s, background-size 2s;
     display: block;
     float: left;
